[metadata]
name = lwpc
version = 0.1.0
author = Michael Hirsch, Ph.D.
url = https://github.com/scivision/lwpc
description = Longwave Propagation Code v2.1
keywords =
  longwave
  radio
  propagation
classifiers =
  Development Status :: 1 - Planning
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering :: Atmospheric Science
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  numpy

[options.extras_require]
tests =
  pytest>=3.5
  flake8
  mypy

[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/
